[package]
name = "prfc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pchain_sdk = { package = "pchain-sdk", version = "0.2.0" }
pchain-types = { package = "pchain-types" , version = "0.2.0" }
borsh = "0.9.3"


